# ai-tutor-main

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: PR Check.yml  backend-tests.yml
backend/: .dockerignore  Dockerfile  README.md  backend-updates.md  diagrams.md  pyproject.toml  swagger.yaml  testing.md
backend/src/app/: main.py
backend/src/app/api/v1/: routes.py
backend/src/app/core/: database.py  dependencies.py  encrypt.py  gemini.py  google_auth.py  settings.py
backend/src/app/mcp/server/: main.py
backend/src/app/models/: auth_token.py  chat_message.py  course.py  file.py  tutor_session.py  user.py
backend/src/app/repository/: auth_token.py  chat_message.py  course.py  file.py  tutor_session.py  user.py
backend/src/app/routes/: chat_message.py  course.py  file.py  google_drive.py  tutor_session.py  user.py  video_generation.py
backend/src/app/schemas/: auth_token.py  chat_message.py  course.py  file.py  google_drive.py  mcp.py  tutor_session.py  user.py  video_generation.py
backend/src/app/services/: auth_token.py  chat_message.py  course.py  file.py  google_drive.py  tutor_session.py  user.py  video_generation.py
backend/src/tests/: README.md  base.py
backend/src/tests/integration/: test_chat_message.py  test_course.py  test_file.py  test_tutor_session.py  test_user.py
backend/src/tests/unit/: test_chat_message.py  test_course.py  test_file.py  test_tutor_session.py  test_user.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: layout.tsx  page.tsx
frontend/components/: CreateClassModal.tsx  Sidebar.tsx
frontend/contexts/: DarkModeContext.tsx
frontend/hooks/: useDarkMode.ts
frontend/lib/: api.ts  mockData.ts
(+8 files in other folders)
