[project]
name = "ai-tutor"
version = "0.1.0"
description = "Smart personalized tutor for google docs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.20.1",
    "fastapi>=0.119.0",
    "fastmcp>=2.12.5",
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.47.0",
    "httpx>=0.28.1",
    "moviepy>=2.2.1",
    "openai>=2.6.1",
    "pre-commit>=4.3.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 88
select = ["ALL"]
exclude = [
    ".venv",
    "venv",
    "env",
    "__pycache__",
]
# select = [
#     "E",  # pycodestyle errors
#     "W",  # pycodestyle warnings
#     "F",  # pyflakes
#     "I",  # isort
#     "B",  # flake8-bugbear
#     "C4", # flake8-comprehensions
#     "UP", # pyupgrade
#     "S",  # bandit
#     "C",  # complexity
#     "D",  # pydocstyle
#     "FAST", # fastapi-specific linting
# ]

fix = true

ignore = [
    "S", # ignore assert again
    "T201",   # allow print()
    "PLR2004", # magic number
    "E501",  # line too long (handled by line-length)
    "D107",  # missing docstring in __init__
    "D104",  # missing docstring in package
    "D", # missing docstring in public modules, classes, functions, and methods
    "S101", # allow asserts in tests
    "SIM105",
    "PLR2004" # allow magic numbers in tests
]

[tool.ruff.isort]
known-first-party = ["src"]
